# dynafed

./: CMakeLists.txt  MyPackager_Core.cmake  README  README.txt  RELEASE-NOTES  VERSION  cmakeme.sh  scratchbuild.sh
UMLdiagrams/: collab1.dia  collab1.dia~  collab1_locations.dia
cmake/modules/: CMakeUninstall.cmake  DefineApachePaths.cmake  DefineInstallationPaths.cmake  FindAPRUtil.cmake  FindDMLite.cmake  FindGeoIP.cmake  FindLFC.cmake  FindLibMemCached.cmake  FindMaxMindDB.cmake  FindProtobuf.cmake  FindPythonLibs.cmake  MacroOutOfSourceBuild.cmake  ReleaseDebugAutoFlags.cmake
dashboard/: common.php  config.php  index.php
dashboard/ui/: error.php  footer.php  header.php  history.php  status.php
doc/: CMakeLists.txt  Doxyfile.in
doc/UMLdiagrams/: mydiagram.dia
doc/paper_chep2018/: dynafed-chep2018.aux
doc/whitepaper/: Doc_DynaFeds.aux  Doc_DynaFeds.tex  Doc_DynaFeds.toc  essay_1.tex  ugr-whitepaper.kilepr
packaging/: CMakeLists.txt
packaging/rpm/specs/: dynafed.spec  dynafed.spec.in  dynafeds.spec  dynafeds.spec.in  ugr.spec  ugr.spec.in
src/: CMakeCache.txt  CMakeLists.txt  Config.cc  Config.h.in  Config.hh  ExtCacheHandler.cc  ExtCacheHandler.hh  GeoPlugin.cc  GeoPlugin.hh  HostsInfoHandler.hh  LocationInfo.cc  LocationInfo.hh  LocationInfoHandler.cc  LocationInfoHandler.hh  LocationPlugin.cc  LocationPlugin.hh  PluginEndpointStatusManager.cc  PluginEndpointStatusManager.hh  PluginInterface.cc  PluginInterface.hh  PluginLoader.cc  PluginLoader.hh  SimpleDebug.cc  SimpleDebug.hh  UgrAuthorization.cc  UgrAuthorization.hh  UgrConfig.cc  UgrConfig.h.in  UgrConfig.hh  UgrConnector.cc  UgrConnector.hh  UgrLogger.cpp  UgrLogger.hh  UgrMemcached.proto  UgrMockFn.hh  UgrPluginLoader.cc  UgrPluginLoader.hh  UgrTypes.hh  plugin_interface.cc  plugin_interface.hh  (+1 more)
src/libs/: time_utils.h
src/nbproject/: configurations.xml  project.xml
src/plugins/: CMakeLists.txt
src/plugins/MSAzureclient/: CMakeLists.txt  UgrLocPlugin_azure.cc  UgrLocPlugin_azure.hh  ugrlocplugin_azure_entry.cc  ugrlocplugin_azure_entry.hh
src/plugins/authpython/: CMakeLists.txt  UgrAuthPlugin_python.cc  UgrAuthPlugin_python.hh  ugrauth_example.py
src/plugins/davclient/: CMakeLists.txt  UgrLocPlugin_dav.cc  UgrLocPlugin_dav.hh  davavailabilitychecker.cc  davavailabilitychecker.hh  ugr_loc_plugin_dav_type.hh  ugrlocplugin_dav_entry.cc  ugrlocplugin_dav_entry.hh
src/plugins/davclient_rucio/: CMakeLists.txt  UgrLocPlugin_davrucio.cc  UgrLocPlugin_davrucio.hh  ugrlocplugin_davrucio_entry.cc  ugrlocplugin_davrucio_entry.hh
src/plugins/dmlite/: CMakeLists.txt  UgrDMLite.cc  UgrDMLite.hh  dmlite.conf  ugrdmlite.conf  zlcgdm-ugr-dav.conf
src/plugins/dmliteclient/: CMakeLists.txt  UgrLocPlugin_dmliteclient.cc  UgrLocPlugin_dmliteclient.hh  ugrdmliteclient.conf  ugrdmliteclientMY.conf  ugrdmliteclientORA.conf
src/plugins/geoIP/: CMakeLists.txt  UgrGeoPlugin_GeoIP.cc  UgrGeoPlugin_GeoIP.hh
src/plugins/geo_maxmindDB/: CMakeLists.txt  UgrGeoPlugin_mmdb.cc  UgrGeoPlugin_mmdb.hh
src/plugins/httpclient/: CMakeLists.txt  UgrLocPlugin_http.cc  UgrLocPlugin_http.hh  httpavailabilitychecker.cc  httpavailabilitychecker.hh  ugr_loc_plugin_http_type.hh  ugrlocplugin_http_entry.cc  ugrlocplugin_http_entry.hh
src/plugins/legacylfc/: CMakeLists.txt  UgrLocPlugin_legacylfc.cc  UgrLocPlugin_legacylfc.hh
src/plugins/lfcclient/: CMakeLists.txt  UgrLocPlugin_lfc.cc  UgrLocPlugin_lfc.hh
src/plugins/noloop/: CMakeLists.txt  filter_noloop_plugin.cc  filter_noloop_plugin.hh
src/plugins/s3client/: CMakeLists.txt  UgrLocPlugin_s3.cc  UgrLocPlugin_s3.hh  ugrlocplugin_s3_entry.cc  ugrlocplugin_s3_entry.hh
src/plugins/simpleDemo/: CMakeLists.txt  UgrLocPlugin_simpleDemo.cc  UgrLocPlugin_simpleDemo.hh
src/plugins/simpleHTTP/: CMakeLists.txt  UgrLocPlugin_simpleHTTP.cc  UgrLocPlugin_simpleHTTP.hh
src/plugins/smplHTTP/: CMakeLists.txt  UgrLocPlugin_simpleHTTP.cc  UgrLocPlugin_simpleHTTP.hh
src/plugins/utils/: HttpPluginUtils.hh  PluginUtils.hh
src/test/: CMakeLists.txt  fed-adev-version2.conf  fed-version2.conf  mycfg-adev-lap.cfg  mycfg-adev-lfc.cfg  mycfg-adev-old.cfg  mycfg-adev.cfg  mycfg.cfg  mycfg_dmliteclient.cfg  testauthorization.cc  testlistdir.cc  testlocate.cc  testnewlocation.cc  testremove.cc  teststat.cc  teststat_sequential.cc  ugr-dav-federation.conf  zlcgdm-dav.conf
src/utils/: CMakeLists.txt  ugrauth_marcus_fast.py  ugrconfig_from_AGIS  ugrconfig_from_AGIS.py  ugrpullscript_gfal.sh  ugrpushscript_gfal.sh
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_filter.cpp
